# ScrAi

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
apps/api/: main.py
apps/cli/: main.py
artifacts/projects/24d2480a-833a-49e4-b846-822408f9fe1a/: project.json  worldmatrix_draft.json
artifacts/projects/24d2480a-833a-49e4-b846-822408f9fe1a/sessions/: 85a2a27f-0a05-4c8c-b76c-46bc9f3dbf61.json
artifacts/projects/80875f2c-fa31-4563-ae33-b83993794ff0/: project.json  worldmatrix_draft.json
artifacts/projects/80875f2c-fa31-4563-ae33-b83993794ff0/sessions/: bfa256a2-0c4f-4dbe-89a1-f4f138a725dc.json
artifacts/projects/80875f2c-fa31-4563-ae33-b83993794ff0/worldmatrices/: 70b50d4c-080a-4fb9-b615-0092fb70ee61.json
artifacts/projects/d53370e8-bcdf-40f8-a94c-0ae7b7dea5a5/: project.json  worldmatrix_draft.json
artifacts/projects/d53370e8-bcdf-40f8-a94c-0ae7b7dea5a5/sessions/: 0b2a677c-c577-4e70-97e3-c5fe3fddfc18.json
artifacts/projects/d53370e8-bcdf-40f8-a94c-0ae7b7dea5a5/worldmatrices/: be3e915b-f706-4bf5-b27b-d14d460e4455.json
artifacts/projects/eb1c2f63-0446-45d3-bf98-887d52d99554/: project.json  worldmatrix_draft.json
artifacts/projects/eb1c2f63-0446-45d3-bf98-887d52d99554/sessions/: 2b3fe788-cc6d-4547-9a4e-cbb309f5bc05.json
artifacts/projects/eb1c2f63-0446-45d3-bf98-887d52d99554/worldmatrices/: 6d87f8b9-0c2b-4005-8a7d-185c11046a1a.json
docs/devops/: agent_zero_integration_plan.md  changelog.md  current_status.md  issues_comments.md  pyscrai_blueprint.md  pyscrai_dev_architecture.md  pyscrai_dev_blueprint.md  vision.md
skills/pyscrai-ingest/: SKILL.md
skills/pyscrai-runtime/: SKILL.md
skills/pyscrai-world-authoring/: SKILL.md
tests/: test_api.py  test_architect_manifest.py
