[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscrai"
version = "0.1.0"
description = "WorldMatrix-first MVP scaffold for PyScrAI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.10,<3.0",
  "typer>=0.12,<1.0",
  "uvicorn>=0.30,<1.0",
  "attrs==25.4.0",
  "cffi==2.0.0",
  "charset-normalizer==3.4.5",
  "colorama==0.4.6",
  "cryptography==46.0.5",
  "distro==1.9.0",
  "griffe==1.15.0",
  "httpx-sse==0.4.3",
  "jiter==0.13.0",
  "jsonschema==4.26.0",
  "jsonschema-specifications==2025.9.1",
  "mcp==1.26.0",
  "openai==2.28.0",
  "openai-agents==0.12.2",
  "pycparser==3.0",
  "pydantic-settings==2.13.1",
  "pyjwt==2.12.1",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.22",
  "redis==7.3.0",
  "referencing==0.37.0",
  "requests==2.32.5",
  "rpds-py==0.30.0",
  "sniffio==1.3.1",
  "sse-starlette==3.3.2",
  "tqdm==4.67.3",
  "types-requests==2.32.4.20260107",
  "urllib3==2.6.3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[project.scripts]
pyscrai = "pyscrai.interfaces.cli:main"
pyscrai-api = "pyscrai.interfaces.api:run"

[tool.setuptools.package-dir]
"" = "packages/core"

[tool.setuptools.packages.find]
where = ["packages/core"]
include = ["pyscrai*"]

[tool.pytest.ini_options]
pythonpath = [
  "packages/core",
]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "ruff>=0.15.6",
]
